--- a/_includes/img-clickable.html
+++ b/_includes/img-clickable.html
@@ -1,4 +1,4 @@
-{% capture image %}
+<!-- {% capture image %} -->
 {% for image in site.static_files %}
 {% if image.path contains 'img/shop' %}
 <li class="slide">
@@ -7,4 +7,4 @@
 </li>
 {% endif %}
 {% endfor %}
-{% endcapture %}{{ image | strip_newlines}}
+<!-- {% endcapture %}{{ image | strip_newlines}} -->
