updating files hope this works

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
             {%if page.environment == 'restoration'%}
             <a class="site-links" href="/index.html">Go To Swap Meet</a>
             {%else%}
-            <a class="site-links" href="/Restoration/">Go to Restoration</a>
+            <a class="site-links" href="/restoration.html">Go to Restoration</a>
             {% endif %}
         </nav>
         <div class="site-title">
@@ -23,7 +23,7 @@
             {% if page.environment == 'restoration'%}
             <a href="/index.html" >{% include Restologo.html %}</a>
             {% else %}
-            <a href="/Restoration/" >{% include SwapmeetLogo.html %}</a>
+            <a href="/restoration.html" >{% include SwapmeetLogo.html %}</a>
             {% endif %}
         </div>
     </section>
