--- a/css/main.sass
+++ b/css/main.sass
@@ -3,7 +3,7 @@
 ---
 @charset "utf-8"
 
-@import "1-tools/_-tools-dir"
-@import "2-base/_-base-dir"
-@import "3-sections/_-sections-dir"
-@import "4-Default/_-default-dir"
+// @import "1-tools/_-tools-dir"
+// @import "2-base/_-base-dir"
+// @import "3-sections/_-sections-dir"
+// @import "4-Default/_-default-dir"
