--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
-<!-- {% if page.environment == 'restoration'%} -->
+{% include head.html%}
+{% if page.environment == 'restoration'%}
   <body class="site-color2">
-<!-- {%else%} -->
+{%else%}
   <body class="site-color1">
-<!-- {% endif %} -->
+{% endif %}
     <input type="checkbox" id="sidebartoggler">
     <div class="page-wrap">
       <label for="sidebartoggler" class="toggle">☰</label>
       <div class="page-content">
+        
       </div>
 
     </div>
-    <!-- <script src="../assets/js/jquery.min.js" charset="utf-8"></script>
+    <script src="../assets/js/jquery.min.js" charset="utf-8"></script>
     <script src="../assets/js/slider.js" charset="utf-8"></script>
-    <script src="../assets/js/sidebar.js" charset="utf-8"></script> -->
+    <script src="../assets/js/sidebar.js" charset="utf-8"></script>
 
   </body>
 
