--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <div class="page-wrap">
       <label for="sidebartoggler" class="toggle">☰</label>
       <div class="page-content">
-        
+      {% include header.html %}
       </div>
 
     </div>
