update sass file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
       <div class="page-content">
       {% include header.html %}
       </div>
-
+      {% include sidebar.html %}
     </div>
     <script src="../assets/js/jquery.min.js" charset="utf-8"></script>
     <script src="../assets/js/slider.js" charset="utf-8"></script>
