changed - now working

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
       <label for="sidebartoggler" class="toggle">☰</label>
       <div class="page-content">
       {% include header.html %}
+      {% include who-we-are.html %}
       </div>
       {% include sidebar.html %}
     </div>
