--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,8 +7,8 @@
         <a class="site-links-mobile" href="#{{ page.link5 }}">{{ page.link5 }}</a>
         <hr>
         {% if page.environment == 'restoration' %}
-        <a class="site-links-mobile website-link" href="/index.html">Go to Swap Meet</a> {%else%}
-        <a class="site-links-mobile website-link" href="/restoration.html">Go to Restoration</a>
+        <a class="site-links-mobile website-link" href="{{site.url}}">Go to Swap Meet</a> {%else%}
+        <a class="site-links-mobile website-link" href="{{site.url}}restoration.html">Go to Restoration</a>
         {% endif %}
 
     </nav>
