fixed more links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
             {% if page.environment == 'restoration'%}
             <a href="{{site.url}}" >{% include Restologo.html %}</a>
             {% else %}
-            <a href=href="{{site.url}}/restoration.html" >{% include SwapmeetLogo.html %}</a>
+            <a href="{{site.url}}/restoration.html" >{% include SwapmeetLogo.html %}</a>
             {% endif %}
         </div>
     </section>
