--- a/_includes/img-clickable.html
+++ b/_includes/img-clickable.html
@@ -1,8 +1,9 @@
+{% capture image %}
 {% for image in site.static_files %}
 {% if image.path contains 'img/shop' %}
 <li class="slide">
-    <!-- <img class="main-img" > -->
-    <img class="main-img" src="{{site.url}}{{image.path}}">
+    <img class="main-img" src="{{"http://127.0.0.1:4000" | site.github.url }}{{image.path}}">
 </li>
 {% endif %}
 {% endfor %}
+{% endcapture %}{{ image | strip_newlines }}
