--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
             <a class="site-links" href="#{{ page.link4 }}">{{ page.link4 }}</a>
             <a class="site-links" href="#{{ page.link5 }}">{{ page.link5 }}</a>
             {%if page.environment == 'restoration'%}
-            <a class="site-links" href="{{"index.html" | prepend: site.github.url}}">Go To Swap Meet</a>
+            <a class="site-links" href="{{"/index.html" | prepend: site.github.url}}">Go To Swap Meet</a>
             {%else%}
             <a class="site-links" href="{{ "/restoration.html" | prepend: site.github.url}}">Go to Restoration</a>
             {% endif %}
@@ -21,7 +21,7 @@
         </div>
         <div class="site-logo">
             {% if page.environment == 'restoration'%}
-            <a href="{{"index.html" | prepend: site.github.url}}" >{% include Restologo.html %}</a>
+            <a href="{{"/index.html" | prepend: site.github.url}}" >{% include Restologo.html %}</a>
             {% else %}
             <a href="{{ "/restoration.html" | prepend: site.github.url}}" >{% include SwapmeetLogo.html %}</a>
             {% endif %}
