--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,9 @@
       </div>
       {% include sidebar.html %}
     </div>
-    <script src="../assets/js/jquery.min.js" charset="utf-8"></script>
-    <script src="../assets/js/slider.js" charset="utf-8"></script>
-    <script src="../assets/js/sidebar.js" charset="utf-8"></script>
+    <script src="{{site.url}}/assets/js/jquery.min.js" charset="utf-8"></script>
+    <script src="{{site.url}}/assets/js/slider.js" charset="utf-8"></script>
+    <script src="{{site.url}}/assets/js/sidebar.js" charset="utf-8"></script>
 
   </body>
 
