--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 {% endif %}
     <input type="checkbox" id="sidebartoggler">
     <div class="page-wrap">
-      <label for="sidebartoggler" class="toggle">☰</label>
+      <label for="sidebartoggler" class="toggle ion-navicon-round"></label>
       <div class="page-content">
       {% include header.html %}
       {% include who-we-are.html %}
