added JS files and more mobile friendly states

--- a/_includes/who-we-are.html
+++ b/_includes/who-we-are.html
@@ -1,5 +1,5 @@
+<a name="{{ page.link1 }}" class="about-link-jump"> </a>
 <section class="about">
-  <a name="{{ page.link1 }}"></a>
   <div class="overlay"></div>
   <article class="column1 ">
     <div class="btm-bdr-bar placeholder-title-about">
