--- a/_sass/3-Sections/_about.sass
+++ b/_sass/3-Sections/_about.sass
@@ -57,7 +57,6 @@
   flex-grow: 2
   display: flex
   flex-flow: column
-  // justify-content: center
   align-items: center
   align-content: stretch
   #slider-container
@@ -67,17 +66,18 @@
     overflow: hidden
     border: 10px solid white
     border-radius: 5px
+    display: block
     .slides
       display: block
-      width: 300%
+      width: 2160px
       height: 100%
       margin: 0
       padding: 0
     .slide
       float: left
       list-style-type: none
-      width: 100%
-      height: 100%
+      width: 720px
+      height: 400px
     img
       z-index: 1
       width: 720px
@@ -111,14 +111,13 @@
     text-align: center
 +media-query($on-mobile)
   .column1
+    margin: 35px
     .placeholder-ben
       +size(75px, auto)
     .placeholder-glennski
       +size(72px, auto)
   .about-text
     padding-bottom: 20px
-  .column1
-    margin: 35px
   .column2
     height: 600px
     flex-flow: column
